--- a/AE6.1_GuillermoCésar_GarcíaBrito/estilo.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/estilo.css
@@ -12,18 +12,38 @@ html {
     border: 1px solid red;
     display: flow-root;
     height: 50px;
+    background-color: rgb(55, 55, 55);
 }
 
-.left {
+.logo_header {
     border: 1px solid green;
     float: left;
-    width: 20%;
+    width: 30%;
+    text-transform: uppercase;
+}
+
+.logo_header > h3 {
+    color: white;
+    text-align: center;
+    padding: 9px;
+    padding-left: 5px;
+    border: solid 1px white;
+    float: left;
+    font-size: 1.7rem;
+}
+
+.logo_header > img {
+    border: solid 1px white;
+    height: 45px;
+    padding-left: 30px;
+    float: left;
+    margin: auto;
 }
 
 .menu_principal {
     border: 1px solid blue;
     float: right;
-    width: 80%;
+    width: 70%;
 }
 
 .menu_principal > .menu {
@@ -33,11 +53,15 @@ html {
 
 .menu_principal > .menu > .menu-item {
     float: left;
-    width: 15%;
+    width: 17.5%;
 }
 
 .menu_principal > .menu > .menu-item:nth-child(2) {
-    width: 35%;
+    width: 30%;
+}
+
+.menu_principal > .menu > .menu-item:nth-child(5) {
+    padding-right: 10px;
 }
 
 .menu_principal > .menu > .menu-item a {
@@ -45,8 +69,8 @@ html {
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    padding: 11px;
-    background-color: black;
+    padding: 15px;
+    background-color: rgb(55, 55, 55);
     color: white;
     display: block;
     font-size: 1.1rem;
@@ -54,6 +78,17 @@ html {
 
 .menu_principal > .menu > .menu-item a:hover {
     color: orangered;
+}
+
+.naranja{
+    color: rgb(255, 107, 54);
+}
+
+.main_container {
+    border: 1px solid orangered;
+    border-top: 1px solid black;
+    margin-top: 10px;
+    padding: 10px;
 }
 
 /* 
