:lipstick: FERNANDO EL GUAPO

--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estiloheader.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estiloheader.css
@@ -10,7 +10,8 @@ html {
 
 .header {
     border: 1px solid red;
-    display: flow-root;
+    display: flex;
+    justify-content: space-between;
     height: 50px;
     background-color: rgb(55, 55, 55);
 }
@@ -20,14 +21,14 @@ html {
     float: left;
     width: 30%;
     text-transform: uppercase;
-    padding-left: 25%;
+    display: flex;
+    align-items: center;
 }
 
 .logo_header > h3 {
     color: white;
     text-align: center;
-    padding: 9px;
-    padding-left: 5px;
+    padding: 11.5px;
     border: solid 1px white;
     float: left;
     font-size: 1.7rem;
@@ -36,9 +37,8 @@ html {
 .logo_header > img {
     border: solid 1px white;
     height: 45px;
-    padding-left: 30px;
     float: left;
-    margin: auto;
+    padding-left: 15%;
 }
 
 .menu_principal {
