--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estilomaincontainer.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estilomaincontainer.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 10px;
+}
+
 .main_container {
     border: 1px solid orangered;
     border-top: 1px solid black;
