--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estilocursos.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estilocursos.css
@@ -1,12 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 10px;
-}
 
 .main_container {
     border: solid 1px black;
@@ -35,6 +26,7 @@ html {
 .curso_falsificacion{ 
     display: flow-root;
     border: solid 1px black;
+    margin-top: 25px;
 }
 
 .curso_falsificacion > img {
@@ -52,12 +44,13 @@ html {
 }
 
 .curso_falsificacion > p {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .curso_diseño{ 
     display: flow-root;
     border: solid 1px black;
+    margin-top: 25px;
 }
 
 .curso_diseño > img {
@@ -76,6 +69,6 @@ html {
 }
 
 .curso_diseño > p {
-    font-size: 3rem;
+    font-size: 2rem;
     padding-left: 2%;
 }
