--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estilosobrenosotros.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estilosobrenosotros.css
@@ -7,7 +7,7 @@
 }
 
 .sub_header {
-
+    font-style: italic;
     border-bottom: 1px solid black;
     border-top: 1px solid black;
     text-transform: uppercase;
