--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estilocursos.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estilocursos.css
@@ -15,6 +15,7 @@
     font-size: 1.6rem;
     margin-top: 10px;
     display: flow-root;
+    font-style: italic;
 }
 
 .small {
@@ -71,4 +72,36 @@
 .curso_diseño > p {
     font-size: 2rem;
     padding-left: 2%;
+}
+
+.curso_diseño > a {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(202, 190, 190);
+    padding: 7px 4%;
+    font-size: 2rem;
+    display: block;
+    float:right;
+    margin-right: 5%;
+    margin-top: 20px;
+    border-radius: 30px;
+    text-transform: uppercase;
+}
+
+.curso_falsificacion > a {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(202, 190, 190);
+    padding: 7px 4%;
+    font-size: 2rem;
+    display: block;
+    float: right;
+    margin-right: 5%;
+    margin-top: 20px;
+    border-radius: 30px;
+    text-transform: uppercase;
+}
+
+a:hover {
+    color:black;
 }
