--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estilotienda.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estilotienda.css
@@ -15,6 +15,7 @@
     font-size: 1.6rem;
     margin-top: 10px;
     display: flow-root;
+    font-style: italic;
 }
 
 .menu_tienda {
@@ -25,7 +26,7 @@
 .tienda {
     list-style: none;
     display: flow-root;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .tienda > .tienda_item {
@@ -33,18 +34,20 @@
     width: 20%;
     border: solid 1px red;
     text-align: center;
-    margin-left: 5%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
     display: flow-root;
 }
 
 .tienda > .tienda_item > img {
-    height: 250px;
+    height: 350px;
     width: 100%;
 }
 
 .tienda > .tienda_item > h3 {
     text-transform: uppercase;
     font-size: 2rem;
+    margin-top: 10px;
 }
 
 .tienda > .tienda_item > h5 {
