--- a/AE6.1_GuillermoCésar_GarcíaBrito/css/estilocontacto.css
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/css/estilocontacto.css
@@ -2,7 +2,6 @@
 /* --- Guillermo César García Brito --- */
 
 .main_container {
-    border: solid 1px black;
     padding: 10px;
     margin-top: 10px;
     display: flow-root;
@@ -21,7 +20,6 @@
 }
 
 .info {
-    border: solid 1px black;
     width: 50%;
     display: flow-root block;
     float: left;
@@ -62,7 +60,6 @@
 /*---- FORM ---- */
 
 .form {
-    border: solid 1px red;
     width: 50%;
     display: flow-root block;
     float: right;
@@ -144,22 +141,7 @@
     background-color: black;
     color: white;
 }
-/*
-.form > form > input {
-    padding: 10px;
-    width: 90%;
-    font-weight: bold;
-    color: black;
-}
 
-.form > form > .boton_enviar {
-    width: 30%;
-    float: right;
-    margin-right: 5%;
+.form > form > .enviar> input:hover {
+    background-color: grey;
 }
-
-.form > form > .checkbox {
-    font-weight: bold;
-    float: left;
-}
-*/
